--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -8,7 +8,7 @@
 		</ul>{% endif %}
 		{% endwith %}
 		
-		<form method="POST" action="{{url_for('base.login')}}" >
+		<form method="POST" action="{{url_for('login')}}" >
 			<h3>Please login with your Tracey username and password</h3>
 			{{form.hidden_tag()}}
 			{{form.username(placeholder="Username")}}
