--- a/app/templates/user_list.html
+++ b/app/templates/user_list.html
@@ -1,7 +1,11 @@
 {% extends "base.html" %}{% block content %}
 
-			<form>
+			<form style="float: left;">
 			<input Type="button" Value="Back" Onclick="window.location.href='{{url_for('customerList')}}'" class="btn btn-primary">
+			</form>
+
+			<form style="float: right;">
+			<input Type="button" Value="New User" Onclick="window.location.href='{{url_for('newUser', firmcode=firmcode)}}'" class="btn btn-primary">
 			</form>
 
 			<table id="main_table" class="table table-striped table-bordered">
@@ -10,7 +14,10 @@
 					<tr>
 						<th>Username</th>		
 						<th>Forename</th>	
-						<th>Surname</th>		
+						<th>Surname</th>
+						<th>Role</th>
+						<th>Group</th>	
+						<th>Person Code</th>	
 					</tr>
 				</thead>
 
@@ -18,7 +25,10 @@
 					<tr>
 						<th>Username</th>
 						<th>Forename</th>	
-						<th>Surname</th>							
+						<th>Surname</th>	
+						<th>Role</th>
+						<th>Group</th>	
+						<th>Person Code</th>											
 					</tr>
 				</tfoot>		
 				
@@ -29,6 +39,9 @@
 						<td><a href="{{url_for('userDetail', firmcode = firmcode, userid=user[0]) }}">{{ user[0] }}</a></td>
 						<td>{{user[1]}}</td>
 						<td>{{user[2]}}</td>
+						<td>{{user[3]}}</td>
+						<td>{{user[4]}}</td>	
+						<td>*{{user[0]}}</td>					
 					</tr>	
 					{% endfor %}
 					
