Add LDAP integration

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -3,7 +3,7 @@
 	<div class="wrapper">	
 	
 		<form method="POST" action="{{url_for('login')}}" >
-			<h3>Please login with your Tracey username and password</h3>
+			<h3>Please login with your JHCTST1 username and password</h3>
 			{{form.hidden_tag()}}
 			{{form.username(placeholder="Username")}}
 			{{form.password(placeholder="Password")}}
