--- a/app/templates/user_list.html
+++ b/app/templates/user_list.html
@@ -18,6 +18,7 @@
 						<th>Role</th>
 						<th>Group</th>	
 						<th>Person Code</th>	
+						<th>Email</th>
 					</tr>
 				</thead>
 
@@ -28,7 +29,8 @@
 						<th>Surname</th>	
 						<th>Role</th>
 						<th>Group</th>	
-						<th>Person Code</th>											
+						<th>Person Code</th>
+						<th>Email</th>											
 					</tr>
 				</tfoot>		
 				
@@ -41,7 +43,8 @@
 						<td>{{user[2]}}</td>
 						<td>{{user[3]}}</td>
 						<td>{{user[4]}}</td>	
-						<td>*{{user[0]}}</td>					
+						<td>*{{user[0]}}</td>
+						<td>{{user[5]}}</td>					
 					</tr>	
 					{% endfor %}
 					
