--- a/app/templates/user_detail.html
+++ b/app/templates/user_detail.html
@@ -5,10 +5,10 @@
 
 			<div>
 			<form style="float: left;">
-			<input Type="button" Value="Back" Onclick="window.location.href='{{url_for('userList', firmcode=firmcode)}}'" class="btn btn-primary">
+			<input Type="button" Value="Back" Onclick="window.location.href='{{url_for('userList')}}'" class="btn btn-primary">
 			</form>
 
-			{% if userForm.user_id.data %}<form style="float: right;" action="{{url_for('deleteUser', firmcode=firmcode, user_id = userForm.user_id.data)}}" method="post">
+			{% if userForm.user_id.data %}<form style="float: right;" action="{{url_for('deleteUser', user_id = userForm.user_id.data)}}" method="post">
 			<input Type="submit" Value="Delete User" class="btn btn-primary" >
 			</form>{% endif %}
 
