--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,7 +1,7 @@
 <html>
 
 	<head>
-		<title>Neon User Management</title>	
+		<title>Neon User Management #12</title>	
 		<link rel="stylesheet" type=text/css href="{{ url_for('static', filename='css.css') }}">
 		<link rel="shortcut icon" href="{{ url_for('static', filename='favicon-96x96.png') }}">		
 		<link rel="stylesheet" type=text/css href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">			
